# claude-devtools-tauri

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  THIRD-PARTY-LICENSES.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  untitled.pen  vite.config.ts
.claude/: architecture.md  development.md
.github/workflows/: release.yml
docs/checks/: check-04.md
docs/superpowers/plans/: 2026-03-26-tray-menu-bar.md  2026-03-30-delete-session.md  2026-03-30-search-mutex-memory-fix.md  2026-04-01-check-11-12-architecture-gaps-fix.md  2026-04-01-ssh-issues-fix.md
docs/superpowers/specs/: 2026-03-26-tray-menu-bar-design.md  2026-03-30-delete-session-design.md  2026-03-30-search-mutex-memory-fix-design.md  2026-03-31-ssh-sftp-implementation-design.md  2026-04-01-check-11-12-architecture-gaps-fix-design.md  2026-04-01-ssh-issues-fix-design.md
scripts/: benchmark.sh
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-window.json
src-tauri/fixtures/: sample-session.jsonl
src-tauri/src/: events.rs  lib.rs  main.rs
src-tauri/src/analysis/: chunk_builder.rs  chunk_builder_tests.rs  conversation_group_builder.rs  mod.rs  process_linker.rs  semantic_step_extractor.rs  semantic_step_grouper.rs  tool_execution_builder.rs  tool_extraction.rs  tool_summary_formatter.rs  waterfall_builder.rs
src-tauri/src/commands/: config.rs  context.rs  guards.rs  http_server.rs  mod.rs  notifications.rs  projects.rs  search.rs  sessions.rs  ssh.rs  subagents.rs  tray.rs  updater.rs  utility.rs  validation.rs  version.rs  window.rs
src-tauri/src/constants/: mod.rs
src-tauri/src/discovery/: mod.rs  project_scanner.rs  session_content_filter.rs  session_searcher.rs  subagent_identity.rs  subagent_linking.rs  subagent_resolver.rs  subproject_registry.rs  worktree_grouper.rs
src-tauri/src/error/: app_error.rs  error_detector.rs  error_message_builder.rs  error_trigger_checker.rs  error_trigger_tester.rs  mod.rs  trigger_matcher.rs
src-tauri/src/error/trigger/: common.rs  mod.rs  repository_scope.rs  token_threshold_checker.rs  tool_result_checker.rs  tool_use_checker.rs
src-tauri/src/http/: cors.rs  mod.rs  path_validation.rs  server.rs  sse.rs  state.rs
src-tauri/src/http/routes/: config.rs  contexts.rs  events.rs  mod.rs  notifications.rs  projects.rs  search.rs  sessions.rs  ssh.rs  subagents.rs  utility.rs  validation.rs
src-tauri/src/infrastructure/: app_bootstrap.rs  config_manager.rs  config_validator.rs  context_manager.rs  context_rebuild.rs  data_cache.rs  file_watcher.rs  fs_provider.rs  local_session_repository.rs  mod.rs  notification_manager.rs  service_context.rs  session_repository.rs  ssh_auth.rs  ssh_config_parser.rs  ssh_connection_manager.rs  ssh_exec.rs  ssh_fs_provider.rs  trigger_manager.rs  watcher_orchestrator.rs
src-tauri/src/infrastructure/config/: defaults.rs  ignore_list.rs  mod.rs  path_utils.rs  session_ops.rs  snooze.rs  tests.rs  trigger_proxy.rs
src-tauri/src/infrastructure/file_watcher/: local_watcher.rs  mod.rs  path_parser.rs  ssh_polling.rs  tests.rs
src-tauri/src/infrastructure/notification/: crud.rs  emission.rs  filtering.rs  mod.rs  persistence.rs  tests.rs
src-tauri/src/infrastructure/ssh_connection/: agent_discovery.rs  client_handler.rs  connect_flow.rs  connection_state.rs  mod.rs  remote_path_resolver.rs  ssh_config_merge.rs  test_flow.rs  tests.rs  types.rs
src-tauri/src/infrastructure/trigger_manager/: apply_updates.rs  defaults.rs  mod.rs  tests.rs  validation.rs
src-tauri/src/parsing/: agent_config_reader.rs  claude_md_reader.rs  git_identity.rs  jsonl_parser.rs  message_classifier.rs  mod.rs  session_parser.rs
src-tauri/src/services/: mod.rs  project_service.rs  project_service_trait.rs  search_service.rs  search_service_trait.rs  session_service.rs  session_service_trait.rs
src-tauri/src/types/: chunks.rs  config.rs  domain.rs  jsonl.rs  messages.rs  mod.rs  ssh.rs
src-tauri/src/utils/: content_sanitizer.rs  context_accumulator.rs  mod.rs  pagination.rs  path_decoder.rs  regex_validation.rs  retry.rs  session_state_detection.rs  time.rs  timeline_gap_filling.rs  timestamp.rs
src/api/: httpClient.ts  index.ts  tauriClient.ts
src/contexts/: TabUIContext.tsx
src/hooks/: useWindowDrag.ts
src/store/: index.ts
src/types/: data.ts
src/utils/: lastOutputDetector.ts  sessionExporter.ts
(+32 files in other folders)
