[package]
name = "claude-devtools-tauri"
version = "0.1.0"
description = "Tauri v2 desktop app for visualizing Claude Code session execution — explore conversations, track context usage, and analyze tool calls"
authors = ["claude-devtools-tauri contributors"]
license = "MIT"
repository = "https://github.com/augustVino/claude-devtools-tauri"
readme = "../README.md"
keywords = ["claude", "devtools", "tauri", "session-visualization"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tokio = { version = "1", features = ["fs", "sync", "time", "macros", "rt-multi-thread", "process"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
notify = "8"
notify-debouncer-mini = "0.5"
moka = { version = "0.12", features = ["future", "sync"] }
regex = "1"
dirs = "6"
notify-rust = "4"
once_cell = "1"
sha2 = "0.10"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
futures = "0.3"
russh = "0.46"
russh-keys = "0.46"
ssh_config = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[dev-dependencies]
tempfile = "3"
